tests/expected_output/clang-8.0-x86_64-pc-linux-gnu/format_type_mismatch.txt
tests/extracted_compile_time_tests/format_type_mismatch.c:5:9: warning: missing terminating '"' character [-Winvalid-pp-token]
        printf("%d
               ^
tests/extracted_compile_time_tests/format_type_mismatch.c:5:9: error: expected expression
tests/extracted_compile_time_tests/format_type_mismatch.c:6:11: warning: missing terminating '"' character [-Winvalid-pp-token]
", "hello!");
          ^
tests/extracted_compile_time_tests/format_type_mismatch.c:7:2: error: expected '}'
}
 ^
tests/extracted_compile_time_tests/format_type_mismatch.c:4:16: note: to match this '{'
int main(void) {
               ^[0m
dcc explanation: Make sure that all opening brace symbols `{` are matched with a closing brace `}`.
